# Intern-Maze-Bot

./: AMAZING_SUPER_AWESOME_ROBOT_3000  CMakeLists.txt  Intern Project Chassis for Testing (1).STL  LAST_VERSION.ino  Logan_Lane.ino  MPUT_Straight  MPU_Straight_no_percentages.cpp  PID_dataset.csv  Revamped_PID.ino  TYRING_TO_SOLVE_ONLY_ULTRASONICS.ino  Turn_1.cpp  Turn_2.cpp  Turn_3.cpp  Tyler-turning.ino  WORKING_TO_FOLLOW_PATH.ino  drive.ino  driver_functions.ino  efficient-er-ff.py  followString.ino  greedy.cpp  ir_test.ino  laneKeep.ino  mouse.cpp  mouse.h  pid_with_offsets_no_percentages.cpp  run.ino  run2.ino  test.cpp
Encoder/: EncoderRPM.cpp  EncoderRPM.h  RPM_test.ino  pinread.ino
efficient-mouse/: HII_mouse.cpp  HII_mouse.h  Kalman.cpp  algo.cpp  just-motors.ino  main.ino  mouse.cpp  mouse.h  pid.h  pid_k.h
mms-test/: Flood.cpp  Flood.h  heuristic.cpp  maze 1.txt  sim  sim.cpp
